I've made some changes to ensure the code is compatible with Java 8.
- In `McpService.java`, I replaced `Map.of()` with `Collections.emptyMap()`.
- Also in `McpService.java`, I replaced `List.of()` with `Collections.emptyList()`.

These adjustments are necessary because `Map.of()` and `List.of()` were introduced in Java 9, and using them would cause issues in Java 8 environments.